Operating Systems Assignments/week10/fatal.command.output
threads.c:7:24: error: expected declaration specifiers or ‘...’ before ‘&’ token
 int pthread_mutex_init(&lock1, NULL);                   // initialize lock1
                        ^
In file included from /usr/include/stdio.h:33,
                 from threads.c:3:
threads.c:7:32: error: expected declaration specifiers or ‘...’ before ‘(’ token
 int pthread_mutex_init(&lock1, NULL);                   // initialize lock1
                                ^~~~
threads.c: In function ‘PrintHello’:
threads.c:12:27: error: expected declaration specifiers or ‘...’ before ‘&’ token
    int pthread_mutex_lock(&lock1);                      // apply lock for the critical section
                           ^
threads.c:19:29: error: expected declaration specifiers or ‘...’ before ‘&’ token
    int pthread_mutex_unlock(&lock1);                    // unlock critical section
                             ^
threads.c: In function ‘main’:
threads.c:48:30: error: expected declaration specifiers or ‘...’ before ‘&’ token
    int pthread_mutex_destroy(&lock1);                   // destroy lock, cannot be used anymore
                              ^
